Connect the API with the components add and edit

--- a/src/app/views/edit/edit.component.html
+++ b/src/app/views/edit/edit.component.html
@@ -1,1 +1,38 @@
-<p>edit works!</p>
+<div class="container">
+    <h1>Editar el Inmobiliario!</h1>
+<form action="">
+    <div class="row">
+    <div class="col-sm-6">
+        <div class="mb-3">
+            <label for="" class="form-label">Imagen del Inmueble</label>
+            <input [(ngModel)]="inmueble.imagen"  type="text" class="form-control" name="imagen">
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Valor del Inmueble</label>
+            <input [(ngModel)]="inmueble.valor_propiedad"  type="text" class="form-control" name="valor_propiedad">
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Area del Inmueble (m²)</label>
+            <input [(ngModel)]="inmueble.areatotal"  type="text" class="form-control" name="areatotal">
+        </div>
+        <div class="mb-3">
+            <button (click)="edit()" class="btn btn-success">Guardar Inmueble</button>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="mb-3">
+            <label for="" class="form-label">Numero de Cuartos del Inmueble</label>
+            <input [(ngModel)]="inmueble.ncuartos"  type="text" class="form-control" name="ncuartos">
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Numero de Baños del Inmueble</label>
+            <input [(ngModel)]="inmueble.nbanos"  type="text" class="form-control" name="nbanos">
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Numero de Parqueaderos del Inmueble</label>
+            <input [(ngModel)]="inmueble.nparqueaderos"  type="text" class="form-control" name="nparqueaderos">
+        </div>
+    </div>
+    </div>
+</form>
+</div>
