--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,7 @@
         </div>
     </div>
 </div>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
