--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -4,11 +4,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link text-light" routerLink="/home">Home</a>
+            <a class="nav-link text-light" routerLink="/home"><i class="fa-solid fa-house-chimney"></i> Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" routerLink="/search"><i class="fa-solid fa-magnifying-glass"></i> Buscar Inmueble</a>
         </li>
         </ul>
         <form class="d-flex" role="search">
-            <button class="btn btn-success" routerLink="/add">Nuevo Inmobiliario</button>
+            <button class="btn btn-success" routerLink="/add"><i class="fa-solid fa-circle-plus"></i> Nuevo Inmueble</button>
         </form>
     </div>
     </div>
