--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,27 +1,3 @@
-.container-fluid{
-    background-image: url(../assets/pictures/fondo.png);
-    margin-right: 0;
-    height: 750px;
-}
-.col{
-    padding-right: 0;
-    padding-left: 0;
-}
-.inmobiliaria{
-    width: 400px;
-    height: 400px;
-}
-#container1{
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    padding-top: 200px; 
-    padding-bottom: 200px;
-    border-right: 1px !important;
-}
-#container2{
-    justify-content: center; 
-    align-items: center; 
-    padding:200px;
-    font-weight: bold;
+body{
+    padding-right: 0 !important;
 }
