--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="text-center text-light text-lg-start bg-light text-muted">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
+        <span>Los invito a que visiten mis redes sociales:</span>
       </div>
       <div>
         <a class="me-4 text-reset" href="https://www.linkedin.com/in/juan-rodriguez99/" target="_blank">
