--- a/src/app/views/edit/edit.component.html
+++ b/src/app/views/edit/edit.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h1>Editar el Inmobiliario!</h1>
+<div class="container text-light">
+    <h1 class="titulo">Editar el Inmobiliario!</h1>
 <form action="">
     <div class="row">
     <div class="col-sm-6">
@@ -15,9 +15,6 @@
             <label for="" class="form-label">Area del Inmueble (m²)</label>
             <input [(ngModel)]="inmueble.areatotal"  type="text" class="form-control" name="areatotal">
         </div>
-        <div class="mb-3">
-            <button (click)="edit()" class="btn btn-success">Guardar Inmueble</button>
-        </div>
     </div>
     <div class="col-sm-6">
         <div class="mb-3">
@@ -31,6 +28,16 @@
         <div class="mb-3">
             <label for="" class="form-label">Numero de Parqueaderos del Inmueble</label>
             <input [(ngModel)]="inmueble.nparqueaderos"  type="text" class="form-control" name="nparqueaderos">
+        </div>
+        <div class="mb-3">
+            <div class="row">
+                <div class="col">
+                    <button (click)="edit()" class="btn btn-success"><i class="fa-solid fa-pen-to-square"></i> Guardar Inmueble</button>
+                </div>
+                <div class="col">
+                    <button routerLink="/search" class="btn btn-danger"><i class="fa-solid fa-left-long"></i> Volver</button>
+                </div>
+            </div>
         </div>
     </div>
     </div>
