--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,9 +5,9 @@
         </div>
     </div>
     <div class="col align-items-center">
-        <div class="container-fluid text-light" id="container2">
+        <div class="container-fluid" id="container2">
             <h1>About APP</h1>
-            <p>App para la prueba tecnica de la empresa JAH Insurance, La app consiste en la creación de una pagina web donde muestra apartamentos añadidos en una base de datos de mysql y creada apartir de una API en NodeJS y Express.</p>
+            <p>App para la prueba tecnica de la empresa JAH Insurance, La app consiste en la creación de una pagina web donde muestra inmuebles añadidos en una base de datos de mysql y creada apartir de una API en NodeJS y Express. Ademas contiene un crud donde se puede añadir, actualizar, eliminar y leer todos los inmuebles</p>
             <img class="aptoc1" [src]="aptoc1" alt="Logo Inmobiliaria"> 
         </div>
         
