--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- Se crea una pequeña presentación de la prueba tecnica -->
 <div class="row align-items-center">
     <div class="col">
         <div class="container-fluid" id="container1">
@@ -13,3 +14,5 @@
         
     </div>
 </div>
+
+<!-- Created By: Juan Felipe Rodríguez Rendón -->
