--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -1,4 +1,4 @@
-<!-- Footer -->
+<!-- Se añade un footer con información mia -->
 <footer class="text-center text-light text-lg-start bg-light text-muted">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <div class="me-5 d-none d-lg-block">
@@ -16,5 +16,7 @@
     <div class="text-center p-4">
         © 2023 Copyright:
         <a class="text-reset fw-bold" href="https://github.com/4Rojack5/" target="_blank">Juan Felipe Rodríguez Rendón</a>
-      </div>
-  </footer>
+    </div>
+</footer>
+
+<!-- Created By: Juan Felipe Rodríguez Rendón -->
