--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<!-- Se crea una navbar para poder navegar por la APP Web -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <img class="logo" [src]="logo" alt="Logo Empresa">
@@ -16,3 +17,5 @@
     </div>
     </div>
 </nav>
+
+<!-- Created By: Juan Felipe Rodríguez Rendón -->
